sistemato posizionamento footer index

--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,11 +1,12 @@
 /* CSS Document */
+html{height: 100%;}
 body {
     margin: 0;
     color: #1c2024;
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
     background: #8e141f!important;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 a:link, a:visited, a:active{
     text-decoration: none;
@@ -41,14 +42,16 @@ h1{
     text-align: center;
 }
 footer{
-    position: absolute;
-    bottom: 0;
+    
     width: 100%;
+    bottom: 0;
     background-color: #fff;
     text-align: center;
-    height: auto;
+    height: 50px;
     padding: 5px 0px;
 }
+
+
 #login_area{
     padding: 0em 0em;
     width: 100%;
@@ -66,4 +69,14 @@ footer{
     margin-left: auto;
     margin-bottom: 2em;
     border-radius: 10px 10px 10px 10px;
+}
+#cont{
+    display: block;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -50px;
+}
+#push{
+    height: 50px;
 }
