--- a/css/reg_style.css
+++ b/css/reg_style.css
@@ -70,6 +70,9 @@ footer>img{
     bottom: 0;
     margin: 0px 0px -5px;
 }
+.campo{
+    width: 160px;
+}
 #cont{
     display: block;
     min-height: 100%;
