--- a/css/pwlost_style.css
+++ b/css/pwlost_style.css
@@ -31,6 +31,7 @@ a:hover{
     margin-right: auto;
     margin-left: auto;
     border-radius: 0px 0px 10px 10px;
+    padding: 0 0 2em;
 }
 nav{
     background-color: #1c2024;
@@ -52,7 +53,7 @@ h1{
 }
 
 p{
-    padding: 0em 5em 3em;
+    text-align-last: center;
 }
 
 footer>img{
@@ -60,6 +61,14 @@ footer>img{
     width: 100%;
     bottom: 0;
     margin: 0px 0px -5px;
+}
+
+.frm{
+    margin: 0 auto;
+    text-align: center;
+}
+#inv{
+    text-align: left !important; 
 }
 #cont{
     display: block;
