--- a/css/tes_style.css
+++ b/css/tes_style.css
@@ -96,9 +96,11 @@ td{
     background-color: rgba(0,0,0,0.00);
     border: rgba(0,0,0,0.00);
 }
+
 .imgp{
     width: 100px;
     height: 100px;
+    display: inline;
 }
 h1,h4{
     margin: 0;
