aggiunta barra alla sceda e sistemata la centratura tenendo conto della barra

--- a/css/tes_style.css
+++ b/css/tes_style.css
@@ -5,8 +5,9 @@ body {
     color: #1c2024;
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
     background: #FFBEB5!important;
-    width: 100%;
+    width: auto;
     height: 100%;
+    padding-left: 75px;
 }
 #ht{
     margin: 1em auto;
