--- a/css/prof_style.css
+++ b/css/prof_style.css
@@ -9,7 +9,8 @@ html, body{
 }
 
 #navbar{
-    position: absolute;
+    position: fixed;
+    left: 0px;
     background-color: #1c2024;
     height: 100%;
     width: 75px;
@@ -26,6 +27,7 @@ html, body{
     padding: 15px 20px;
     /*aggiungere colore del campo attivo e nel html sostituire la classe
     iconbarcont con iconbarcontactive*/
+    background-color: crimson;
 }
 .icobarcont{
     padding: 15px 20px;
@@ -39,6 +41,7 @@ html, body{
     background: -webkit-linear-gradient(135deg, #ffb300 0%, #ce8600 100%);
     background: linear-gradient(135deg, #ffb300 0%, #ce8600 100%);
 }
+
 #logoutbg{
     position: absolute;
     bottom: 10px;
