--- a/css/login_style.css
+++ b/css/login_style.css
@@ -63,10 +63,10 @@ footer{
     border-radius: 0px 0px 10px 10px;
 }
 #login_area > h1{
-    color: #fff;
+    color: #f6f6f6;
 }
 #main_page{
-    background-color: #fff;
+    background-color: #f6f6f6;
     width: 60%;
     margin-right: auto;
     margin-left: auto;
