--- a/css/pwlost_style.css
+++ b/css/pwlost_style.css
@@ -24,7 +24,7 @@ a:hover{
     background-color: #1c2024;
 }
 #main_content{
-    background-color: #fff;
+    background-color: #f6f6f6;
     width: 60%;
     margin-top: -1em;
     height: auto;
