--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -9,6 +9,47 @@ body {
     width: auto;
     height: 100%;
 }
+.center{
+    text-align: center;
+}
+.agenda{
+    display: inline-block;
+    width: 30%;
+    height: 600px;
+    padding: 0em;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    border: 1px solid #ececec;
+    vertical-align: top;
+}
+.today{
+    width: 100%;
+    height: 150px;
+    background: #1c2024;
+    border-radius: 0px 0px 30px 30px;
+    display: table;
+    
+}
+
+.today>h2{
+    color:#fff;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 1.5em;
+    margin: 0;
+}
+.calendario{
+    vertical-align: top;
+    display: inline-block;
+    width: 60%;
+    height: 600px;
+    padding: 0em;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    border: 1px solid #ececec;
+}
 ::-webkit-scrollbar{
     background-color: #fff;
     width: 5px;
