--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -25,7 +25,7 @@ body {
 }
 .today{
     width: 100%;
-    height: 150px;
+    height: 100px;
     background: #1c2024;
     border-radius: 0px 0px 30px 30px;
     display: table;
@@ -34,10 +34,33 @@ body {
 
 .today>h2{
     color:#fff;
-    display: table-cell;
+    display: table-row;
     vertical-align: middle;
     font-size: 1.5em;
     margin: 0;
+}
+.today>h6{
+    color: #fff;
+    display: table-cell;
+    vertical-align: top;
+    padding-top: 10px;
+}
+.eventi{
+    border-radius: 20px 20px 0px 0px;
+    width: 95%;
+    height: 76%;
+    background: #E2E2E2;
+    margin: 20px auto 0px;
+    padding-top: 25px;
+    
+}
+
+.evento{
+    width: 96%;
+    height: 75px;
+    background: #fcc;
+    margin: 0 auto 15px;
+    padding: 5px;
 }
 .calendario{
     vertical-align: top;
