--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -27,9 +27,10 @@ body {
     width: 100%;
     height: 100px;
     background: #1c2024;
-    border-radius: 0px 0px 30px 30px;
     display: table;
-    
+    margin-top: 1em;
+    margin-bottom: 1em;
+
 }
 
 .today>h2{
@@ -46,21 +47,32 @@ body {
     padding-top: 10px;
 }
 .eventi{
-    border-radius: 20px 20px 0px 0px;
-    width: 95%;
-    height: 76%;
-    background: #E2E2E2;
-    margin: 20px auto 0px;
-    padding-top: 25px;
-    
+    width: 100%;
+    height: 468px;
+    overflow-x: auto;
 }
 
 .evento{
-    width: 96%;
+    width: 90%;
     height: 75px;
     background: #fcc;
     margin: 0 auto 15px;
     padding: 5px;
+}
+.day{
+    display: inline-block;
+    background: #00f;
+    height: 100%;
+    width: 75px;
+    vertical-align: middle;
+}
+.info{
+    display: inline-block;
+    background: #0f0;
+    height: 100%;
+    width: 60%;
+    vertical-align: middle;
+    text-align: left;
 }
 .calendario{
     vertical-align: top;
@@ -74,7 +86,7 @@ body {
     border: 1px solid #ececec;
 }
 ::-webkit-scrollbar{
-    background-color: #fff;
+    background-color: #F6F6F6;
     width: 5px;
 }
 ::-webkit-scrollbar-thumb{
