--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -29,8 +29,6 @@ body {
     background: #1c2024;
     display: table;
     margin-top: 1em;
-    margin-bottom: 1em;
-
 }
 
 .today>h2{
@@ -48,31 +46,34 @@ body {
 }
 .eventi{
     width: 100%;
-    height: 468px;
+    height: 485px;
     overflow-x: auto;
 }
 
 .evento{
     width: 90%;
     height: 75px;
-    background: #fcc;
     margin: 0 auto 15px;
     padding: 5px;
 }
 .day{
     display: inline-block;
-    background: #00f;
     height: 100%;
     width: 75px;
+    border-right: 2px #1c2024 solid;
     vertical-align: middle;
 }
 .info{
     display: inline-block;
-    background: #0f0;
     height: 100%;
-    width: 60%;
+    width: 55%;
     vertical-align: middle;
     text-align: left;
+    padding-left: 10px;
+    margin-top: -15px;
+}
+.tcv{
+    margin-top: 18px;
 }
 .calendario{
     vertical-align: top;
