--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -86,8 +86,48 @@ body {
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
     border: 1px solid #ececec;
 }
+.tb_h{
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
 table{
+    width: 90%;
     background: #fcc;
+    margin-left: auto;
+    margin-right: auto;
+}
+th{
+    width: 13%;
+    height: 40px;
+    background: #f6f6f6;
+    
+}
+td{
+    height: 70px;
+    border: 1px solid #fff;
+}
+
+.ar-bk{
+    display: inline-block;
+    background-image: url("../icons/md-arrow-round-back.svg");
+    height: 32px;
+    width: 32px;
+    vertical-align: top;
+    
+}
+.mo{
+    display: inline-block;
+    padding: 0 1em;
+    height: 32px;
+    vertical-align: top;
+    line-height: 32px;
+}
+.ar-fo{
+    display: inline-block;
+    background-image: url("../icons/md-arrow-round-forward.svg");
+    height: 32px;
+    width: 32px;
+    vertical-align: top;
 }
 ::-webkit-scrollbar{
     background-color: #F6F6F6;
