--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -45,7 +45,7 @@ body {
     padding-top: 10px;
 }
 .eventi{
-    width: 100%;
+    width: 99.9%;
     height: 485px;
     overflow-x: auto;
 }
@@ -90,12 +90,19 @@ body {
     margin-top: 1em;
     margin-bottom: 1em;
 }
+/*tag per giorno con evento
+.ev{
+    height: 20px;
+    width: 20px;
+    background-image: url("../icons/md-pricetags.svg");
+    position: absolute;
+}*/
 table{
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    border-collapse: collapse;
-    border-spacing: 0;
+    /*border-collapse: collapse;*/
+    border-spacing: 10px;
 }
 th{
     width: 13%;
@@ -104,20 +111,40 @@ th{
     
 }
 td{
-    height: 70px;
-    border: 3px solid #f6f6f6;
+    height: 60px;
+    background-color: #fff;
+    border: 1px solid #1c2024;
 }
 td:hover{
-    background: #fff;
-    border-radius: 15px;
+    background-color: #ffb300;
+    color: #fff;
+}
+.ev{
+    margin: 0 auto;
+    width: 30px;
+    border: 1.5px solid #1c2024;
+    line-height: 30px;
+    border-radius: 20px;
+}
+
+.day-lf{
+    border-radius: 0px 30px 0px 30px ;
+}
+.day-mi{
+    border-radius: 30px 30px 30px 30px ;
+}
+.day-ri{
+    border-radius: 30px 0px 30px 0px ;
 }
 .no-mo{
     color: #A3A3A3;
-    
+    background-color: #f6f6f6;
 }
 .no-mo:hover{
-    background:  rgba(255,255,255,0.00); 
+    color: #A3A3A3;
+    background-color: #f6f6f6;
 }
+
 .ar-bk{
     display: inline-block;
     background-image: url("../icons/md-arrow-round-back.svg");
