--- a/css/bar_style.css
+++ b/css/bar_style.css
@@ -1,9 +1,7 @@
 /* CSS Document */
-html, body{
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
+body{
+    width: auto!important;
+    padding-left: 75px!important;
 }
 nav{
     background-color: #1c2024;
