--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -147,6 +147,7 @@ td:hover{
     display: inline-block;
     padding: 0 1em;
     height: 32px;
+    width: 150px;
     vertical-align: top;
     line-height: 32px;
 }
