aggiunto referendum e timbro dopo votazione da sistemare

--- a/css/bar_style.css
+++ b/css/bar_style.css
@@ -62,7 +62,7 @@ nav{
 #option{
     background-image: url("../icons/md-options.svg");
 }
-#vote{
+#vote, #vote1{
     background-image: url("../icons/md-paper.svg");
 }
 #logout{
