--- a/css/profilo_style.css
+++ b/css/profilo_style.css
@@ -35,6 +35,7 @@ h1{
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
     padding: 1em;
+    overflow-x: auto;
 }
 .hdnotizia{
     text-align: right;
