aggiunta icona close su today cal

--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -14,6 +14,7 @@
     vertical-align: top;
 }
 .today{
+    position: relative;
     width: 100%;
     height: 100px;
     background: #1c2024;
@@ -30,6 +31,7 @@
 }
 .today>h6{
     color: #fff;
+    font-size: .90em;
     display: table-cell;
     vertical-align: top;
     padding-top: 10px;
@@ -109,12 +111,42 @@ td:hover{
     background-color: #ffb300;
     color: #fff;
 }
+.close{
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0px 10px 30px -14px #000;
+    position: absolute;
+    top:2.5em;
+    right: 20px;
+    cursor: pointer;
+    transition: all 350ms ease;
+    transition-timing-function: cubic-bezier(0.05,1.8,1,1.57);
+}
+.close:hover{
+    transform: translateY(-10%);
+}
+
+.close>i{
+    background-image: url("../icons/md-close.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 1.2em;
+    width: 1.7em;
+    height: 1.7em;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .ev{
     background-image: url("../icons/circle.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 37px 37px;
     line-height: 30px;
+}
+.ev:hover{
+    cursor: pointer;
 }
 
 .day-lf{
@@ -143,6 +175,9 @@ td:hover{
     vertical-align: top;
     
 }
+.ar-bk:hover{
+    cursor: pointer;
+}
 .mo{
     display: inline-block;
     padding: 0 1em;
@@ -158,7 +193,9 @@ td:hover{
     width: 32px;
     vertical-align: top;
 }
-
+.ar-fo:hover{
+    cursor: pointer;
+}
 #main_content{
     width: 80%;
     margin-top: -1em;
