--- a/css/tes_style.css
+++ b/css/tes_style.css
@@ -48,8 +48,8 @@ a:hover{
     
 }
 h2{
-    text-align: center;
-    font-size: 3em;
+    text-align: justify;
+    font-size: 1.5em;
 }
 .tasto{
     display: inline-block;
