--- a/css/tes_style.css
+++ b/css/tes_style.css
@@ -51,6 +51,9 @@ h2{
     text-align: justify;
     font-size: 1.5em;
 }
+.hidden{
+    visibility: hidden;
+}
 .tasto{
     display: inline-block;
     font-size: 2em;
