--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -44,7 +44,7 @@
 
 .evento{
     width: 90%;
-    height: 75px;
+    height: auto;
     margin: 0 auto 15px;
     padding: 5px;
 }
@@ -52,17 +52,19 @@
     display: inline-block;
     height: 100%;
     width: 75px;
-    border-right: 2px #1c2024 solid;
     vertical-align: middle;
 }
 .info{
+    
+    min-height: 75px;
+    border-left: 2px #1c2024 solid;
     display: inline-block;
     height: 100%;
     width: 55%;
     vertical-align: middle;
     text-align: left;
     padding-left: 10px;
-    margin-top: -15px;
+    
 }
 .tcv{
     margin-top: 18px;
