--- a/css/cal_style.css
+++ b/css/cal_style.css
@@ -68,9 +68,9 @@
     
 }
 .info:hover{
-    border-left: 2px #fcc solid;
+    border-left: 2px #8e141f solid;
     cursor: pointer;
-    color: #fcc;
+    color: #8e141f;
     
 }
 .tcv{
